2010-08-16  Adam Barth  <abarth@webkit.org>

        Reviewed by Alexey Proskuryakov.

        document.write() isn't processed immediately before DOM access
        https://bugs.webkit.org/show_bug.cgi?id=36881

        Test that document.write gets flushed before DOM access takes place.

        * fast/tokenizer/document-write-racing-dom-access-expected.txt: Added.
        * fast/tokenizer/document-write-racing-dom-access.html: Added.

2010-08-16  Yuta Kitamura  <yutak@chromium.org>

        Not reviewed. Chromium test expectations updates and rebaselines.

        * platform/chromium-linux/fast/canvas/setWidthResetAfterForcedRender-expected.checksum: Added.
        * platform/chromium-linux/fast/canvas/setWidthResetAfterForcedRender-expected.png: Added.
        * platform/chromium-linux/fast/text/word-space-expected.checksum:
        * platform/chromium-linux/fast/text/word-space-expected.png:
        * platform/chromium-linux/tables/mozilla/other/wa_table_thtd_rowspan-expected.checksum:
        * platform/chromium-linux/tables/mozilla/other/wa_table_thtd_rowspan-expected.png:
        * platform/chromium-mac/fast/canvas/setWidthResetAfterForcedRender-expected.checksum: Added.
        * platform/chromium-mac/fast/canvas/setWidthResetAfterForcedRender-expected.png: Added.
        * platform/chromium-mac/fast/text/word-space-expected.checksum: Added.
        * platform/chromium-mac/fast/text/word-space-expected.png: Added.
        * platform/chromium-mac/tables/mozilla/other/wa_table_thtd_rowspan-expected.checksum: Added.
        * platform/chromium-mac/tables/mozilla/other/wa_table_thtd_rowspan-expected.png: Added.
        * platform/chromium-win/fast/canvas/setWidthResetAfterForcedRender-expected.checksum: Added.
        * platform/chromium-win/fast/canvas/setWidthResetAfterForcedRender-expected.png: Added.
        * platform/chromium-win/fast/canvas/setWidthResetAfterForcedRender-expected.txt: Added.