@@ -1,0 +1,10 @@
+<html> 
+<body> 
+<script>
+if (window.layoutTestController)
+    layoutTestController.dumpAsText();
+</script>
+Should not say FAIL:
+<script src="data:text/javascript,document.write('<script>');document.write('</script><noscript>');document.write('<div>FAIL</div>');document.write('</noscript>');"></script> 
+</body> 
+</html>
